# SWE-bench_Pro-os

./: .gitmodules  Chronological_branches.txt  Dataset-Collection-Quality-Report.md  Dockerfile  LICENSE  README.md  SWE-Bench-Pro-Paper.md  Sheet_IDs.txt  add_dockerfiles_to_csv.py  branch_loc_results.txt  build_and_push_images.sh  check_languages.py  datapoint_145.md  generate_examples.py  get_datapoint_patches.py  golden_patch_145.diff  index.html  install_system_dep_regenerated.sh  install_system_deps.sh  missing_docker_images.txt  pyproject.toml  requirements.txt  run_scripts.py  show_random_datapoint.py  swe_bench_pro_eval.py  test_patch_145.diff
SWE-agent/: README.md  README_scale.md  SWEAgent.Dockerfile  compile_predictions.py  justfile  pyproject.toml  sweagent_wrapper.py
SWE-agent/data/: instances.yaml  (+1 more)
artifacts/: Dockerfile.system-deps  install_system_deps.sh
dataset_preprocessing/: GEN_BASH_SCRIPT_SETUP.md  README.md  collect_all_system_deps.py  dockerfile_to_bash.py  gen_bash_script_setup.py  jsonl_to_csv.py  prepare_dataset.py  test_instance.py  test_instance.sh  test_setup_script_in_docker.py
examples/: README.md
helper_code/: CONVERT_DOCKERFILE_SETUP_TO_BASH.md  GEN_SETUP.md  collect_all_system_deps.py  convert_dockerfile_setup_to_bash.py  convert_to_setup_script.py  create_problem_statement.py  extract_gold_patches.py  gather_patches.py  gen_setup.py  generate_sweagent_instances.py  gold_test_fetcher.py  image_uri.py  test_setup_script_in_docker.py
prompts/: generate_system_deps_script.md
scripts/: strip_future_history.py
traj/: README.md
(+2050 files in other folders)
