[project]
name = "swe-bench-pro-os"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.14.0",
    "docker>=6.0.0",
    "huggingface-hub>=0.16.0",
    "modal>=0.50.0",
    "pandas>=1.5.0",
    "tqdm>=4.64.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dataset_preprocessing"]
